# sonic-buildimage

./: .gitignore  .gitmodules  Makefile  Makefile.cache  Makefile.work  README.arm64_build_on_amd64.md  README.buildsystem.md  README.md  ThirdPartyLicenses.txt  azure-pipelines.yml  build_debian.sh  build_debug_docker_j2.sh  build_image.sh  functions.sh  get_docker-base.sh  onie-image-arm64.conf  onie-image-armhf.conf  onie-image.conf  onie-mk-demo.sh  pytest.ini  slave.mk
.azure-pipelines/: azure-pipelines-Official.yml  azure-pipelines-UpgrateVersion.yml  azure-pipelines-build-ubuntu-2004.yml  azure-pipelines-build-ubuntu-2204.yml  azure-pipelines-build-vs-and-test.yml  azure-pipelines-build-vs.yml  azure-pipelines-build.yml  azure-pipelines-image-template.yml  azure-pipelines-repd-build-variables.yml  build-template.yml  docker-sonic-mgmt-mixed.yml  docker-sonic-mgmt-py3-only.yml  docker-sonic-mgmt.yml  docker-sonic-slave-template.yml  docker-sonic-slave.yml  dpkg-cache-cleanup.yml  official-build-cache.yml  official-build-cisco-8000.yml  official-build-multi-asic.yml  official-build-vs-with-test.yml  official-build.yml  template-commonlib.yml  template-daemon.yml  template-skipvstest.yml  template-variables.yml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
dockers/: dockerfile-macros.j2
dockers/docker-bmp-watchdog/watchdog/: Cargo.toml
dockers/docker-bmp-watchdog/watchdog/debian/: control  install
dockers/docker-bmp-watchdog/watchdog/src/: main.rs
dockers/docker-telemetry-watchdog/watchdog/: Cargo.toml
dockers/docker-telemetry-watchdog/watchdog/debian/: changelog  control  install
dockers/docker-telemetry-watchdog/watchdog/src/: cmd_list.json  main.rs
installer/: default_platform.conf  install.sh
rules/: bash.mk  config  dash-ha.dep  dash-ha.mk  dash-sai.dep  dash-sai.mk  dhcp4relay.dep  dhcp4relay.mk  dhcprelay.mk  docker-auditd-watchdog.dep  docker-auditd-watchdog.mk  docker-auditd.dep  docker-auditd.mk  docker-base-bookworm.dep  docker-base-bookworm.mk  docker-base-bullseye.mk  docker-bmp-watchdog.dep  docker-bmp-watchdog.mk  docker-bmp.dep  (+155 more)
src/sonic-ctrmgrd-rs/: Cargo.toml  Makefile
src/sonic-ctrmgrd-rs/crates/docker-rs/: Cargo.toml
src/sonic-ctrmgrd-rs/crates/docker-rs/src/: container.rs  main.rs
src/sonic-ctrmgrd-rs/crates/docker-wait-any-rs/: Cargo.toml
src/sonic-ctrmgrd-rs/crates/docker-wait-any-rs/src/: lib.rs  main.rs
src/sonic-ctrmgrd-rs/crates/docker-wait-any-rs/tests/: docker_wait_any_test.rs
src/sonic-ctrmgrd-rs/debian/: changelog  control  install
src/sonic-framework/: configure.ac  package.cfg
src/sonic-framework/debian/: changelog  control  rules
src/sonic-framework/rebootbackend/: reboot.xml  reboot_thread.cpp  reboot_thread.h  rebootbe.cpp
src/sonic-framework/tests/: Makefile.am  mock_reboot_interfaces.h  reboot_thread_test.cpp  rebootbe_test.cpp
src/sonic-pac/fpinfra/: Makefile.am  configure.ac  fpSonicUtils.cpp  fpnim.cpp  fpnim.h  nimsync.cpp  nimsync.h
src/sonic-pac/fpinfra/log/: log.c
src/sonic-pac/fpinfra/nim/: nim_cnfgr.c  nim_config.c  nim_data.c  nim_debug.c  nim_events.c  nim_ifindex.c  nim_intf_api.c  nim_intf_map_api.c  nim_outcalls.c  nim_startup.c  nim_trace.c  nim_util.c
src/sonic-pac/fpinfra/osapi/: init_platform_config.c  osapi.c  osapi_file.c  osapi_rwlock.c  osapi_sem.c  osapi_support.c  osapi_time.c  osapi_util.c  proc_osapi_msg.c  proc_osapi_task.c
src/sonic-pac/fpinfra/sim/: sim.cpp
src/sonic-pac/fpinfra/sysapi/: sysapi.c  sysapi_hpc.c  sysapi_if_net.c
src/sonic-pac/fpinfra/util/apptimer/: apptimer.c
src/sonic-pac/fpinfra/util/avl/: avl.c  avl_util.c  tree_api.c
src/sonic-pac/fpinfra/util/buff/: buff.c  buff.h
src/sonic-pac/fpinfra/util/md5/: md5.c
src/sonic-pac/fpinfra/util/sll/: sll.c
src/sonic-pac/fpinfra/util/utils/: util.c
src/sonic-pac/hostapdmgr/: Makefile.am  hostapdmgr.cpp  hostapdmgr.h  hostapdmgr_main.cpp
src/sonic-pac/mab/: Makefile.am
src/sonic-pac/mab/common/: mab_api.h  mab_common.h  mab_exports.h
src/sonic-pac/mab/mapping/: mab_api.c  mab_auth_mgr.c  mab_cfg.c  mab_client.c  mab_control.c  mab_debug.c  mab_ih.c  mab_init.c  mab_socket.c
src/sonic-pac/mab/mapping/include/: mab_cfg.h  mab_client.h  mab_control.h  mab_debug.h  mab_ih.h  mab_include.h  mab_socket.h  mab_struct.h
src/sonic-pac/mab/mapping/mab_sid/: mab_sid.c  mab_sid.h  mab_sid_const.h
src/sonic-pac/mab/protocol/: mab_auth.c  mab_db.c  mab_local.c  mab_mac_db.c  mab_radius.c  mab_timer.c  mab_utils.c  mab_vlan.c
src/sonic-pac/mab/protocol/include/: mab_auth.h  mab_db.h  mab_local.h  mab_mac_db.h  mab_radius.h  mab_timer.h  mab_util.h  mab_vlan.h
src/sonic-pac/mabmgr/: Makefile.am  mabmgr.cpp  mabmgr.h  mabmgr_main.cpp
src/sonic-pac/paccfg/: Makefile.am  pac_authmgrcfg.cpp  pac_authmgrcfg.h  pac_cfg_authmgr.cpp  pac_cfg_authmgr.h  pac_cfg_vlan.cpp  pac_cfg_vlan.h  pac_vlancfg.cpp  pac_vlancfg.h
src/sonic-pac/pacmgr/: Makefile.am  pacmgr.cpp  pacmgr.h  pacmgr_main.cpp
src/sonic-pac/pacoper/: Makefile.am  pacoper.cpp  pacoper.h  pacoper_common.h
src/sonic-rs-common/: Cargo.toml
src/sonic-rs-common/src/: device_info.rs  lib.rs  logger.rs
src/sonic-rs-common/tests/: device_info_test.rs  mock_state_db.rs  test_logger.rs
src/sonic-supervisord-utilities-rs/: Cargo.toml  Makefile
src/sonic-supervisord-utilities-rs/debian/: changelog  control  install  rules
src/sonic-supervisord-utilities-rs/src/: childutils.rs  lib.rs  proc_exit_listener.rs
src/sonic-supervisord-utilities-rs/tests/: integration_tests.rs  test_listener.rs
src/sonic-supervisord-utilities-rs/tests/etc/supervisor/: critical_processes  watchdog_processes
src/sonic-supervisord-utilities-rs/tests/test_data/: config_db.json
src/sonic-sysmgr/: .gitignore  Makefile.am  autogen.sh  package.cfg
src/sonic-sysmgr/debian/: control  rules
src/sonic-sysmgr/rebootbackend/: Makefile.am  interfaces.cpp  interfaces.h  reboot_common.h  reboot_interfaces.h  reboot_thread.cpp  rebootbackend.cpp  rebootbe.cpp  rebootbe.h
src/sonic-sysmgr/tests/: rebootbe_test.cpp  test_main.cpp
(+6263 files in other folders)
