[package]
name = "sonic-supervisord-utilities-rs"
version = "1.0.0"
edition = "2021"
authors = ["SONiC Team <linuxnetdev@microsoft.com>"]
description = "SONiC supervisord utilities in Rust"
license = "Apache-2.0"
homepage = "https://github.com/Azure/sonic-buildimage"
repository = "https://github.com/Azure/sonic-buildimage"
keywords = ["sonic", "supervisord", "networking"]

[[bin]]
name = "supervisor-proc-exit-listener-rs"
path = "src/bin/supervisor_proc_exit_listener.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
syslog = "6.0"
nix = { version = "0.27", features = ["signal", "process"] }
thiserror = "1.0"
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
swss-common = { path = "../sonic-swss-common/crates/swss-common" }

[dev-dependencies]
tempfile = "3.0"
injectorpp = { git = "https://github.com/microsoft/injectorppforrust.git", rev = "c7317906a1d514ef99bf2fbd4c943908c265d280" } ## For ARM support
serde_json = "1.0"
scopeguard = "1.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
