[package]
name = "telemetry_watchdog"
version = "0.1.0"
edition = "2021"
description = "watchdog for telemetry container"
license = "MIT"
authors = ["Feng Pan"]

[dependencies]
daemonize = "0.5"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = "0.23.3"
url = "=2.4.1"

[[bin]]
name = "telemetry_watchdog"
path = "src/main.rs"
